# beethoven-ai-final-symphony

./: .gitignore  01_OMR_demo.ipynb  01_beethoven_ai_final_symphony.ipynb  02_Gesture_demo.ipynb  03_Synthesis_demo.ipynb  03_carnegie_hall_flagship_ADV.ipynb  04_nasa_orbital_symphony_ADV.ipynb  06_boeing_rpa_aerospace_ops_ADV.ipynb  07_apple_prestige_tech_music_ecosys_ADV.ipynb  10_nbcu_symphony_insights_ADV.ipynb  README.md  README.txt  beethoven_demo.ipynb  beethoven_demo_clean.ipynb  carnegie_hall_ml.ipynb  force_sync.sh  requirements.txt  run_visuals_and_push.sh  sync.sh  tempo_demo.ipynb
01_disney_emotion_midi/: README.md
02_warner/: =  proof.py
02_warner_tension_tempo/: README.md
03_sony_duel_agents/: README.md
03_sony_multiagent_duel/: README.md
04_nbcu_motif_recommendation/: README.md  run.py
04_nbcu_motif_recommender/: README.md
05_paramount_content_dynamics/: README.md  run.py  run.py.save
06_netflix_orchestral_storytelling/: README.md  fix_latency_plot.py
07_apple/: README.md
07_apple_gesture_music/: README.md
08_boeing_aerospace_ops/: README.md
09_northrop_autonomous_control/: README.md
09_northrop_grumman/: README.md  README.md.save  run.py
10_nasa/: README.md
10_nasa_telemetry_orchestration/: README.md
_research/: benchmarks.py  orchestrate.py  run_visuals_and_push.sh
_research/cpp_dsp/: CMakeLists.txt  polyphony.cpp
docs/: all_mirrors_visuals.html
gesture/: pose_extract.py
julia/: Harmony.jl
notebooks/: 01_beethoven_ai_final_symphony.ipynb  README.md  beethoven_demo.ipynb  tempo_demo.ipynb
rust_core/: Cargo.toml
(+61 files in other folders)
